--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Md. Jakir Hossain",
+  "jobTitle": "BGAS-CSWIP Certified Painting Inspector | QA/QC Coating Inspector",
+  "image": "https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/Images/myphoto.jpg",
+  "url": "https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/",
+  "sameAs": [
+    "https://www.linkedin.com/in/jakir-hossain-coating-inspector",
+    "mailto:jakirhossan121bd@gmail.com"
+  ],
+  "description": "BGAS-CSWIP Grade-II Certified Painting Inspector and NDT Level-2 Engineer with hands-on experience in coating inspection, surface preparation, DFT measurements, holiday testing, and QA/QC in oil & gas sector.",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Technic Construction Company Ltd. (Chevron Bangladesh Contractor)"
+  }
+}
+</script>
   <!-- Google Verification -->
   <meta name="google-site-verification" content="9TVaqzjMRn_dI7oM1CNAnZCAOVurpYFkHIb_OUyBiDY" />
 
@@ -8,10 +27,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <!-- SEO Title -->
-  <title>Md Jakir Hossain — QA/QC Painting Inspector & NDT Level-2 Engineer Bangladesh</title>
+  <title>BGAS-CSWIP Certified Painting Inspector | QA/QC Coating Inspector | Jakir Hossain</title>
 
   <!-- SEO Description (Super Important) -->
-  <meta name="description" content="Md Jakir Hossain — Certified BGAS-CSWIP Grade-II Painting Inspector & NDT Level-2 Engineer (UT/PT/MT/RT). Experienced in coating inspection, DFT measurement, holiday testing, QA/QC, and NDT works across Chevron Bibiyana Gas Plant, Bangabandhu Railway Bridge, Dhaka Metro Rail and HSIA Terminal-3 projects in Bangladesh.">
+ <meta name="description" content="Jakir Hossain is a BGAS-CSWIP Grade-II Certified Painting Inspector and NDT Level-2 Engineer with expert experience in coating inspection, DFT measurement, holiday testing, blasting & painting QA/QC, and oil & gas sector (Chevron Bibiyana).">
 
   <!-- SEO Author -->
   <meta name="author" content="Md Jakir Hossain — QA/QC Painting Inspector & NDT Level-2 Engineer">
@@ -23,23 +42,18 @@
   <meta name="robots" content="index, follow">
 
   <!-- OG Tags (Facebook / LinkedIn Preview) -->
-  <meta property="og:title" content="MD Jakir Hossain — QA/QC Painting Inspector & NDT Level-2 Engineer">
-  <meta property="og:description" content="Professional BGAS-CSWIP Grade-II Painting Inspector & NDT Level-2 Engineer with experience in major industrial and infrastructure projects across Bangladesh.">
-  <meta property="og:image" content="https://jakir-paintinginspectorbangladesh.netlify.app/Images/myphoto.jpg">
-  <meta property="og:url" content="https://jakir-paintinginspectorbangladesh.netlify.app">
-  <meta property="og:type" content="website">
+  <meta property="og:title" content="BGAS-CSWIP Certified Painting Inspector | Jakir Hossain">
+<meta property="og:description" content="Professional QA/QC Coating Inspector with BGAS-CSWIP Grade-II Certification, NDT Level-2, and Oil & Gas Project Experience.">
+<meta property="og:image" content="https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/Images/myphoto.jpg">
+<meta property="og:url" content="https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/">
+<meta property="og:type" content="website">
 
   <!-- Twitter Card (Optional but good for SEO) -->
-  <meta name="twitter:card" content="summary_large_image">
+ <meta name="twitter:card" content="summary_large_image">
+<link rel="canonical" href="https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/">
 </head>
-
-  <!-- Open Graph (replace yourdomain when you have one) -->
-  <meta property="og:title" content="Md Jakir Hossain — QA/QC Painting Inspector">
-  <meta property="og:description" content="BGAS-CSWIP Grade-II & NDT Level-2. Coating inspection and NDT across major industrial projects.">
-  <meta property="og:image" content="https://yourdomain.com/Images/myphoto.jpg">
-  <meta property="og:type" content="website">
-  <link rel="canonical" href="https://yourdomain.com">
-
+<body>
+    
   <!-- Fonts and icons -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -251,11 +265,11 @@ footer {
       <div class="hero-left">
         <h1>Professional QA/QC Painting Inspector & NDT Level-2 Engineer</h1>
         <p>BGAS-CSWIP Grade-II & NDT Level-2 — Coating inspection, blasting supervision, DFT & holiday testing, and NDT across oil & gas, rail and airport projects. Specialist in inspection documentation (ITP, NCR), calibration and on-site coordination.</p>
-        <div class="hero-ctas">
-          <a href="#projects" class="btn">View Projects</a>
-          <a href="#contact" class="send">Get In Touch <i class="fa-solid fa-paper-plane" style="color:var(--accent)"></i></a>
-          <a href="assets/resume/jakir-resume.pdf" class="btn btn-primary" download>
-        </div>
+       <div class="hero-ctas">
+  <a href="#projects" class="btn">View Projects</a>
+  <a href="#contact" class="send">Get In Touch <i class="fa-solid fa-paper-plane" style="color:var(--accent)"></i></a>
+  <a href="Assets/resume/Md_Jakir_Hossain_CV.pdf" class="btn btn-primary" download>Download CV</a>
+</div>
       </div>
 
       <div class="portrait" aria-hidden="true">
@@ -490,48 +504,46 @@ footer {
     </table>
 </div>
 
-        <!-- START: Netlify contact form (replace existing form block) -->
-<form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="contact-form" action="/thank-you.html">
-  <!-- required hidden input for Netlify -->
-  <input type="hidden" name="form-name" value="contact">
+        <!-- Contact Form Section -->
+<form action="https://formspree.io/f/manrwovd" method="POST" class="contact-form">
 
-  <!-- honeypot (spam trap) -->
-  <p style="display:none">
-    <label>Don't fill this out if you're human: <input name="bot-field"></label>
-  </p>
+    <!-- Redirect after submit -->
+    <input type="hidden" name="_redirect" value="https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/thank-you.html">
 
-  <div style="display:flex;gap:10px;flex-wrap:wrap;">
-    <div style="flex:1;min-width:200px">
-      <label for="name">Your Name *</label><br>
-      <input id="name" name="name" type="text" required>
+    <div style="display:flex;gap:10px;flex-wrap:wrap;">
+        <div style="flex:1;min-width:200px">
+            <label for="name">Your Name</label><br>
+            <input id="name" name="name" type="text" required>
+        </div>
+
+        <div style="width:260px;min-width:200px">
+            <label for="email">Your Email</label><br>
+            <input id="email" name="email" type="email" required>
+        </div>
     </div>
 
-    <div style="width:260px;min-width:200px">
-      <label for="email">Your Email *</label><br>
-      <input id="email" name="email" type="email" required>
+    <div style="margin-top:10px">
+        <label for="phone">Phone Number</label><br>
+        <input id="phone" name="phone" type="text">
     </div>
-  </div>
 
-  <div style="margin-top:10px">
-    <label for="phone">Phone Number</label><br>
-    <input id="phone" name="phone" type="text">
-  </div>
+    <div style="margin-top:10px">
+        <label for="subject">Subject</label><br>
+        <input id="subject" name="subject" type="text" required>
+    </div>
 
-  <div style="margin-top:10px">
-    <label for="subject">Subject *</label><br>
-    <input id="subject" name="subject" type="text" required>
-  </div>
+    <div style="margin-top:10px">
+        <label for="message">Message</label><br>
+        <textarea id="message" name="message" rows="6" required></textarea>
+    </div>
 
-  <div style="margin-top:10px">
-    <label for="message">Message *</label><br>
-    <textarea id="message" name="message" rows="6" required></textarea>
-  </div>
+    <div style="margin-top:10px">
+        <button type="submit" class="send btn btn-primary">
+            <i class="fa-solid fa-paper-plane"></i> Send Message
+        </button>
+    </div>
 
-  <div style="margin-top:12px">
-    <button type="submit" class="send btn btn-primary"><i class="fa-solid fa-paper-plane"></i> Send Message</button>
-  </div>
 </form>
-<!-- END: Netlify contact form -->
 
       </div>
     </section>
@@ -592,22 +604,47 @@ footer {
   </script>
 
   <!-- Small structured data for Google (image gallery samples) -->
-  <script type="application/ld+json">
+    <script type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"ImageGallery",
     "name":"Inspection Gallery — Md Jakir Hossain",
-    "url":"https://yourdomain.com/#gallery",
+    "url":"https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/#gallery",
     "image":[
-      {"@type":"ImageObject","contentUrl":"https://yourdomain.com/Images/inspections/inspection-01.jpg","description":"DFT measurement - Bibiyana"},
-      {"@type":"ImageObject","contentUrl":"https://yourdomain.com/Images/inspections/inspection-02.jpg","description":"Abrasive blasting - Bridge"},
-      {"@type":"ImageObject","contentUrl":"https://yourdomain.com/Images/inspections/inspection-05.jpg","description":"Coating application - HSIA"},
-      {"@type":"ImageObject","contentUrl":"https://yourdomain.com/Images/inspections/inspection-06.jpg","description":"Weld touch-up - Metro"},
-      {"@type":"ImageObject","contentUrl":"https://yourdomain.com/Images/inspections/inspection-10.jpg","description":"Holiday detection - Pipeline"},
-      {"@type":"ImageObject","contentUrl":"https://yourdomain.com/Images/inspections/inspection-15.jpg","description":"ITP review on site"}
+      {
+        "@type":"ImageObject",
+        "contentUrl":"https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/Images/inspections/inspection-01.jpg",
+        "description":"DFT measurement - Bibiyana"
+      },
+      {
+        "@type":"ImageObject",
+        "contentUrl":"https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/Images/inspections/inspection-02.jpg",
+        "description":"Abrasive blasting - Bridge"
+      },
+      {
+        "@type":"ImageObject",
+        "contentUrl":"https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/Images/inspections/inspection-05.jpg",
+        "description":"Coating application - HSIA"
+      },
+      {
+        "@type":"ImageObject",
+        "contentUrl":"https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/Images/inspections/inspection-06.jpg",
+        "description":"Weld touch-up - Metro"
+      },
+      {
+        "@type":"ImageObject",
+        "contentUrl":"https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/Images/inspections/inspection-10.jpg",
+        "description":"Holiday detection - Pipeline"
+      },
+      {
+        "@type":"ImageObject",
+        "contentUrl":"https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/Images/inspections/inspection-15.jpg",
+        "description":"ITP review on site"
+      }
     ]
   }
   </script>
 </body>
 
 </html>
+
