--- a/index.html
+++ b/index.html
@@ -2,192 +2,190 @@
 <html lang="en">
 <head>
   <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Md. Jakir Hossain",
-  "jobTitle": "BGAS-CSWIP Certified Painting Inspector | QA/QC Coating Inspector",
-  "image": "https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/Images/myphoto.jpg",
-  "url": "https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/",
-  "sameAs": [
-    "https://www.linkedin.com/in/jakir-hossain-coating-inspector",
-    "mailto:jakirhossan121bd@gmail.com"
-  ],
-  "description": "BGAS-CSWIP Grade-II Certified Painting Inspector and NDT Level-2 Engineer with hands-on experience in coating inspection, surface preparation, DFT measurements, holiday testing, and QA/QC in oil & gas sector.",
-  "worksFor": {
-    "@type": "Organization",
-    "name": "Technic Construction Company Ltd. (Chevron Bangladesh Contractor)"
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Md. Jakir Hossain",
+    "jobTitle": "BGAS-CSWIP Certified Painting Inspector | QA/QC Coating Inspector",
+    "image": "https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/Images/myphoto.jpg",
+    "url": "https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/",
+    "sameAs": [
+      "https://www.linkedin.com/in/jakir-hossain-coating-inspector",
+      "mailto:jakirhossan121bd@gmail.com"
+    ],
+    "description": "BGAS-CSWIP Grade-II Certified Painting Inspector and NDT Level-2 Engineer with hands-on experience in coating inspection, surface preparation, DFT measurements, holiday testing, and QA/QC in oil & gas sector.",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Technic Construction Company Ltd. (Chevron Bangladesh Contractor)"
+    }
   }
-}
-</script>
-  <!-- Google Verification -->
-  <meta name="google-site-verification" content="9TVaqzjMRn_dI7oM1CNAnZCAOVurpYFkHIb_OUyBiDY" />
+  </script>
 
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="9TVaqzjMRn_dI7oM1CNAnZCAOVurpYFkHIb_OUyBiDY">
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <!-- SEO Title -->
   <title>BGAS-CSWIP Certified Painting Inspector | QA/QC Coating Inspector | Jakir Hossain</title>
 
-  <!-- SEO Description (Super Important) -->
- <meta name="description" content="Jakir Hossain is a BGAS-CSWIP Grade-II Certified Painting Inspector and NDT Level-2 Engineer with expert experience in coating inspection, DFT measurement, holiday testing, blasting & painting QA/QC, and oil & gas sector (Chevron Bibiyana).">
+  <!-- SEO Description -->
+  <meta name="description" content="Jakir Hossain is a BGAS-CSWIP Grade-II Certified Painting Inspector and NDT Level-2 Engineer with expert experience in coating inspection, DFT measurement, holiday testing, blasting & painting QA/QC, and oil & gas sector (Chevron Bibiyana).">
 
   <!-- SEO Author -->
   <meta name="author" content="Md Jakir Hossain — QA/QC Painting Inspector & NDT Level-2 Engineer">
 
-  <!-- SEO Keywords for ranking -->
+  <!-- SEO Keywords -->
   <meta name="keywords" content="Painting Inspector Bangladesh, Coating Inspector, Painting Inspector, QC Painting, QC Coating, QA/QC Coating, QA/QC Painting, Certified Coating Inspector, Certified Painting Inspector, Painting Engineer, Coating Engineer, QC Painting Engineer, QC Coating Engineer, QA QC Coating Engineer, QA QC Painting Engineer, OIL & GAS Coating Inspector, Coating Inspector Bangladesh, QA QC Painting Inspector, BGAS CSWIP Grade II, NDT Level 2 Engineer Bangladesh, Coating Inspection Bangladesh, Industrial Painting Inspector, Chevron Bangladesh Coating Inspector, Holiday Testing Bangladesh, DFT Testing Bangladesh, QA QC Engineer Bangladesh">
 
-  <!-- Let Google Index Everything -->
+  <!-- Robots -->
   <meta name="robots" content="index, follow">
 
-  <!-- OG Tags (Facebook / LinkedIn Preview) -->
+  <!-- OG Tags -->
   <meta property="og:title" content="BGAS-CSWIP Certified Painting Inspector | Jakir Hossain">
-<meta property="og:description" content="Professional QA/QC Coating Inspector with BGAS-CSWIP Grade-II Certification, NDT Level-2, and Oil & Gas Project Experience.">
-<meta property="og:image" content="https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/Images/myphoto.jpg">
-<meta property="og:url" content="https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/">
-<meta property="og:type" content="website">
+  <meta property="og:description" content="Professional QA/QC Coating Inspector with BGAS-CSWIP Grade-II Certification, NDT Level-2, and Oil & Gas Project Experience.">
+  <meta property="og:image" content="https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/Images/myphoto.jpg">
+  <meta property="og:url" content="https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/">
+  <meta property="og:type" content="website">
 
-  <!-- Twitter Card (Optional but good for SEO) -->
- <meta name="twitter:card" content="summary_large_image">
-<link rel="canonical" href="https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/">
-</head>
-<body>
-    
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://jakircoatinginspector-droid.github.io/Jakir-Hossain-BGAS-Certified-Coating-Inspector/">
+
   <!-- Fonts and icons -->
-    <!-- Fonts and icons -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-  <!-- Minimal, safe CSS (no fancy frameworks) -->
+  <!-- GLOBAL THEME + LAYOUT CSS -->
   <style>
-:root{
-  /* THEME 1 — NAVY BLUE + AQUA (60-30-10) */
-  --bg1: #071428;      /* dominant background (deep navy) */
-  --bg2: #0b2940;      /* subtle second background stop */
-  --card: #0f2f44;     /* card/panel background (secondary) */
-  --accent: #25d6f0;   /* aqua accent (buttons, links) */
-  --accent-2: #18b5c6; /* darker aqua for borders/shadows */
-  --text: #EAF6FA;     /* main text color (soft white) */
-  --muted: #9db6c4;    /* muted / secondary text */
-  --muted-2: #7b98a6;  /* darker muted */
-  --round: 12px;
-  --shadow: 0 10px 30px rgba(2,12,25,0.6);
-  --maxw: 1150px;
-}
+    :root{
+      /* THEME 1 — NAVY BLUE + AQUA (60-30-10) */
+      --bg1: #071428;
+      --bg2: #0b2940;
+      --card: #0f2f44;
+      --accent: #25d6f0;
+      --accent-2: #18b5c6;
+      --text: #EAF6FA;
+      --muted: #9db6c4;
+      --muted-2: #7b98a6;
+      --round: 12px;
+      --shadow: 0 10px 30px rgba(2,12,25,0.6);
+      --maxw: 1150px;
+    }
 
-/* ==== EXTRA VISUAL UPGRADES ==== */
+    /* ... KEEP ALL YOUR EXISTING CSS HERE ... */
 
-/* Glow under section titles */
-.section-title {
-  position: relative;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-}
-.section-title::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  bottom: -8px;
-  transform: translateX(-50%);
-  width: 90px;
-  height: 3px;
-  border-radius: 999px;
-  background: radial-gradient(circle, var(--accent) 0, transparent 70%);
-  opacity: 0.9;
-}
+    /* ==== EXTRA VISUAL UPGRADES ==== */
 
-/* Floating / glow cards */
-.card,
-.contact-info,
-.contact-form,
-.resume-box,
-.cert-item {
-  transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
-}
-.card:hover,
-.contact-info:hover,
-.contact-form:hover,
-.resume-box:hover,
-.cert-item:hover {
-  transform: translateY(-4px);
-  border-color: rgba(37,214,240,0.45);
-  box-shadow: 0 18px 40px rgba(12,117,152,0.45);
-}
+    .section-title {
+      position: relative;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+    }
+    .section-title::after {
+      content: "";
+      position: absolute;
+      left: 50%;
+      bottom: -8px;
+      transform: translateX(-50%);
+      width: 90px;
+      height: 3px;
+      border-radius: 999px;
+      background: radial-gradient(circle, var(--accent) 0, transparent 70%);
+      opacity: 0.9;
+    }
 
-/* Project image zoom */
-.card-img img {
-  transition: transform 0.25s ease;
-}
-.card:hover .card-img img {
-  transform: scale(1.06);
-}
+    .card,
+    .contact-info,
+    .contact-form,
+    .resume-box,
+    .cert-item {
+      transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
+    }
+    .card:hover,
+    .contact-info:hover,
+    .contact-form:hover,
+    .resume-box:hover,
+    .cert-item:hover {
+      transform: translateY(-4px);
+      border-color: rgba(37,214,240,0.45);
+      box-shadow: 0 18px 40px rgba(12,117,152,0.45);
+    }
 
-/* Gallery hover */
-.gallery-item img {
-  transition: transform 0.25s ease, opacity 0.2s ease;
-}
-.gallery-item:hover img {
-  transform: scale(1.05);
-  opacity: 0.92;
-}
-.gallery-item:hover figcaption {
-  color: var(--accent);
-}
+    .card-img img {
+      transition: transform 0.25s ease;
+    }
+    .card:hover .card-img img {
+      transform: scale(1.06);
+    }
 
-/* Buttons 3D glow effect */
-.btn,
-.btn-primary,
-.send {
-  position: relative;
-  overflow: hidden;
-}
-.btn::before,
-.btn-primary::before,
-.send::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background: radial-gradient(circle at 0 0, rgba(255,255,255,0.18), transparent 55%);
-  opacity: 0;
-  transition: opacity 0.2s ease;
-}
-.btn:hover::before,
-.btn-primary:hover::before,
-.send:hover::before {
-  opacity: 1;
-}
+    .gallery-item img {
+      transition: transform 0.25s ease, opacity 0.2s ease;
+    }
+    .gallery-item:hover img {
+      transform: scale(1.05);
+      opacity: 0.92;
+    }
+    .gallery-item:hover figcaption {
+      color: var(--accent);
+    }
 
-/* Background neon shapes */
-section {
-  position: relative;
-  overflow: hidden;
-}
-section::before {
-  content: "";
-  position: absolute;
-  width: 260px;
-  height: 260px;
-  border-radius: 40% 60% 55% 45%;
-  background: radial-gradient(circle at 30% 30%, rgba(37,214,240,0.12), transparent 70%);
-  top: -60px;
-  right: -80px;
-  opacity: 0.7;
-  pointer-events: none;
-}
-section::after {
-  content: "";
-  position: absolute;
-  width: 220px;
-  height: 220px;
-  border-radius: 50%;
-  background: radial-gradient(circle at 10% 90%, rgba(24,181,198,0.14), transparent 70%);
-  bottom: -80px;
-  left: -60px;
-  opacity: 0.7;
-  pointer-events: none;
-}
-</style>
+    .btn,
+    .btn-primary,
+    .send {
+      position: relative;
+      overflow: hidden;
+    }
+    .btn::before,
+    .btn-primary::before,
+    .send::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(circle at 0 0, rgba(255,255,255,0.18), transparent 55%);
+      opacity: 0;
+      transition: opacity 0.2s ease;
+    }
+    .btn:hover::before,
+    .btn-primary:hover::before,
+    .send:hover::before {
+      opacity: 1;
+    }
+
+    section {
+      position: relative;
+      overflow: hidden;
+    }
+    section::before {
+      content: "";
+      position: absolute;
+      width: 260px;
+      height: 260px;
+      border-radius: 40% 60% 55% 45%;
+      background: radial-gradient(circle at 30% 30%, rgba(37,214,240,0.12), transparent 70%);
+      top: -60px;
+      right: -80px;
+      opacity: 0.7;
+      pointer-events: none;
+    }
+    section::after {
+      content: "";
+      position: absolute;
+      width: 220px;
+      height: 220px;
+      border-radius: 50%;
+      background: radial-gradient(circle at 10% 90%, rgba(24,181,198,0.14), transparent 70%);
+      bottom: -80px;
+      left: -60px;
+      opacity: 0.7;
+      pointer-events: none;
+    }
+  </style>
+</head>
+<body>
 /* NAV / HEADER */
 .navbar, header {
   background: linear-gradient(180deg, var(--bg1), var(--bg2));
@@ -761,5 +759,6 @@ footer {
 </body>
 
 </html>
+
 
 
