--- a/index.html
+++ b/index.html
@@ -610,6 +610,7 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#resume">Resume</a></li>
+          <li><a href="tools.html">Tools</a></li>
           <li><a href="#contact" class="btn">Hire Me</a></li>
         </ul>
       </nav>
@@ -1011,3 +1012,4 @@
   </script>
 </body>
 </html>
+
